--- a/templates/index.html
+++ b/templates/index.html
@@ -41,5 +41,11 @@
         <label>{{ output | safe }}</label><br>
         <button type="submit" name="submit">Convert</button>
     </form>
-</body>
+
+<!-- Navigation button -->
+<br>
+<a href="{{ url_for('test') }}">
+    <button type="button">Change Page</button>
+  </a>
+  </body>
 </html>
