--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
 <!-- Navigation button -->
 <br>
-<a href="{{ url_for('test') }}">
+<a href="index.html">
     <button type="button">Change Page</button>
   </a>
   </body>
