--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
 <!-- Navigation button -->
 <br>
 <a href="index.html">
-    <button type="button">Change Page</button>
+    <button type="button" name="Change Page">Change Page</button>
   </a>
   </body>
 </html>
