--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,8 @@
         <button type="submit" name="submit">Convert</button>
     </form>
 
+    <button type="button" name="Change Page">Change Page</button>
+    
     <br>
     <a href="index.html">
         <button type="button" name="Change Page">Change Page</button>
