--- a/templates/index.html
+++ b/templates/index.html
@@ -40,10 +40,11 @@
         <label>Feet:</label><br>
         <label>{{ output | safe }}</label><br>
         <button type="submit" name="submit">Convert</button>
+        <button type="button" name="Change Page">Change Page</button>
     </form>
 
     <button type="button" name="Change Page">Change Page</button>
-    
+
     <br>
     <a href="index.html">
         <button type="button" name="Change Page">Change Page</button>
