--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
     </form>
 
     
-    <a href="index.html">
+    <a href="{{url_for('second.html') }}">
         <button type="button" name="Change Page">Change Page</button>
     </a>
 
