--- a/templates/index.html
+++ b/templates/index.html
@@ -42,10 +42,9 @@
         <button type="submit" name="submit">Convert</button>
     </form>
 
-    
-    <a href="{{url_for('second.html') }}">
-        <button type="button" name="Change Page">Change Page</button>
+    <br>
+    <a href="{{ url_for('second_page') }}">
+        <button type="button">Change Page</button>
     </a>
-
-  </body>
+</body>
 </html>
