--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meters to Feet</title>
+    <title>Meters to Feet (Index)</title>
     <style>
         body {
             margin: 0;
