--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login Page</title>
     <style>
         body {
             margin: 0;
@@ -34,8 +33,7 @@
     </style>
 </head>
 <body>
-    <title>Login Here</title>
-
+    <h1>Login Here</h1>
     <form method="POST">
         <label>Username:</label>
         <input type="text" name="textbox" value="{{ login_text }}"><br>
