--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -5,7 +5,8 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
+            width: 500vh;
+            height: 500vh;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -21,7 +22,8 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
-        input[type="text"] {
+        input[type="text"],
+        input[type="password"] {
             padding: 5px;
             margin: 10px 0;
         }
