--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -14,7 +14,7 @@
 
         form {
             text-align: center;
-            width: 100vh;
+            width: 60vh;
             padding: 100px;
             border: 2px solid #ccc;
             border-radius: 10px;
@@ -40,7 +40,7 @@
         <form method="POST">
             <h1 style="text-align: center;">Login Here</h1>
             <label>Username:</label><br>
-            <input type="text" name="textbox" value="{{ login_text }}"><br><br>
+            <input type="text" name="textbox" hidden="Username:" value="{{ login_text }}"><br><br>
             <label>Password:</label><br>
             <input type="password" name="password" value="{{ password_text }}"><br><br>
             <div style="text-align: center; margin-top: 10px;">
