--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -39,8 +39,7 @@
     <div>
         <form method="POST">
             <h1 style="text-align: center;">Login Here</h1>
-            <label>Username:</label><br>
-            <input type="text" name="textbox" hidden="Username:" value="{{ login_text }}"><br><br>
+            <input type="text" name="textbox" placeholder="Username" value="{{ login_text }}"><br>
             <label>Password:</label><br>
             <input type="password" name="password" value="{{ password_text }}"><br><br>
             <div style="text-align: center; margin-top: 10px;">
