--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -24,6 +24,7 @@
 
         input[type="text"],
         input[type="password"] {
+            width: 10vh;
             padding: 5px;
             margin: 10px 0;
         }
@@ -39,9 +40,10 @@
     <div>
         <form method="POST">
             <h1 style="text-align: center;">Login Here</h1>
-            <input type="text" name="textbox" placeholder="Username" value="{{ login_text }}"><br>
-            <label>Password:</label><br>
-            <input type="password" name="password" value="{{ password_text }}"><br><br>
+            <input type="text" name="textbox" placeholder="Username" value="{{ login_text }}">
+            <br>
+            <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+            <br>
             <div style="text-align: center; margin-top: 10px;">
                 <a href="{{ url_for('second_page') }}">
                     <button type="submit" name="login">Login</button>
