--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -25,7 +25,8 @@
 
         input[type="text"],
         input[type="password"] {
-            width: 20vh;
+            width: 25vh;
+            height: 5vh;
             padding: 5px;
             margin: 10px 0;
         }
