--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -38,6 +38,7 @@
     </style>
 </head>
 <body>
+    <img src="src/INTI_PIC.jpg" alt="INTI Picture">
     <div>
         <form method="POST">
             <h1 style="text-align: center;">Login Here</h1>
