--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -10,6 +10,10 @@
             align-items: center;
             justify-content: center;
             font-family: Arial, sans-serif;
+            background-image: url("src/INTI_PIC.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         form {
@@ -19,8 +23,8 @@
             border: 2px solid #ccc;
             border-radius: 10px;
             margin-top: 20px;
-            background-color: #f9f9f9;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: rgba(255, 255, 255, 0.9); /* semi-transparent */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
 
         input[type="text"],
@@ -38,21 +42,18 @@
     </style>
 </head>
 <body>
-    <img src="src/INTI_PIC.jpg" alt="INTI Picture">
-    <div>
-        <form method="POST">
-            <h1 style="text-align: center;">Login Here</h1>
-            <br><br>
-            <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
-            <br>
-            <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
-            <br>
-            <div style="text-align: center; margin-top: 10px;">
-                <a href="{{ url_for('second_page') }}">
-                    <button type="submit" name="login">Login</button>
-                </a>
-            </div>
-        </form>
-    </div>
+    <form method="POST">
+        <h1>Login Here</h1>
+        <br><br>
+        <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+        <br>
+        <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+        <br>
+        <div style="text-align: center; margin-top: 10px;">
+            <a href="{{ url_for('second_page') }}">
+                <button type="submit" name="login">Login</button>
+            </a>
+        </div>
+    </form>
 </body>
 </html>
