--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -10,7 +10,7 @@
             align-items: center;
             justify-content: center;
             font-family: Arial, sans-serif;
-            background-image: url("src/INTI_PIC.jpg");
+            background-image: url("src/INTI_PIC.png");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
