--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Login_Page</title>
     <style>
         body {
             margin: 0;
@@ -10,7 +11,7 @@
             align-items: center;
             justify-content: center;
             font-family: Arial, sans-serif;
-            background-image: url("src/INTI_PIC.png");
+            background-image: url("../src/INTI_PIC.png");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
