--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Login_Page</title>
+
     <style>
         body {
             margin: 0;
@@ -9,7 +11,11 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            background-image: url("../src/INTI_PIC.png");
             font-family: Arial, sans-serif;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         form {
@@ -18,12 +24,14 @@
             padding: 100px;
             border: 2px solid #ccc;
             border-radius: 10px;
-            background-color: #f9f9f9;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: 20px;
+            /*background-color: rgba(255, 255, 255, 0.9);*/ /* semi-transparent */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
 
         input[type="text"],
         input[type="password"] {
+            width: 25vh;
             padding: 5px;
             margin: 10px 0;
         }
@@ -31,24 +39,23 @@
         button {
             width: 20vh;
             padding: 8px 16px;
-            margin-top: 10px;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <div>
-        <form method="POST">
-            <h1 style="text-align: center;">Login Here</h1>
-            <label>Username:</label><br>
-            <input type="text" name="textbox" value="{{ login_text }}"><br><br>
-            <label>Password:</label><br>
-            <input type="password" name="password" value="{{ password_text }}"><br><br>
-            <div style="text-align: center; margin-top: 10px;">
-                <a href="{{ url_for('second_page') }}">
-                    <button type="submit" name="login">Login</button>
-                </a>
-            </div>
-        </form>
-    </div>
+    <form method="POST">
+        <h1>Login Here</h1>
+        <br><br>
+        <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+        <br>
+        <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+        <br>
+        <div style="text-align: center; margin-top: 10px;">
+            <a href="{{ url_for('second_page') }}">
+                <button type="submit" name="login">Login</button>
+            </a>
+        </div>
+    </form>
 </body>
 </html>
