--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -44,6 +44,18 @@
     </style>
 </head>
 <body>
-
+    <form method="POST">
+        <h1>Login Here</h1>
+        <br><br>
+        <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+        <br>
+        <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+        <br>
+        <div style="text-align: center; margin-top: 10px;">
+            <a href="{{ url_for('second_page') }}">
+                <button type="submit" name="login">Login</button>
+            </a>
+        </div>
+    </form>
 </body>
 </html>
