--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -11,7 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image: url("../src/INTI_PIC.png");
+            background-image: url("{{ url_for('src', filename='INTI_PIC.png') }}");
             font-family: Arial, sans-serif;
             background-size: cover;
             background-position: center;
