--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -12,7 +12,7 @@
         align-items: center;
         justify-content: center;
         font-family: Arial, sans-serif;
-        background-image: url("{{ url_for('src', filename='INTI_PIC.png') }}");
+        /*background-image: url("{{ url_for('src', filename='INTI_PIC.png') }}");*/
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
