--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -13,6 +13,8 @@
             align-items: center;
             justify-content: center;
             background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
+            background-position: center;
+            background-repeat: no-repeat;
         }
 
         form {
