--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -18,12 +18,13 @@
         }
 
         form {
-            text-align: center;
-            width: 60vh;
+            text-align: right;
+            width: 50vh;
             padding: 100px;
             border: 2px solid #ccc;
             border-radius: 10px;
             margin-top: 20px;
+            background-color: #fff;
             /*background-color: rgba(255, 255, 255, 0.9);*/ /* semi-transparent */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
@@ -33,12 +34,14 @@
             width: 25vh;
             padding: 5px;
             margin: 10px 0;
+            background-color: #000;
         }
 
         button {
             width: 20vh;
             padding: 8px 16px;
             margin-top: 20px;
+            background-color: #000;
         }
     </style>
 </head>
