--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -18,7 +18,8 @@
         }
 
         form {
-            text-align: right;
+            margin-left: 50px;
+            text-align: center;
             width: 50vh;
             padding: 100px;
             border: 2px solid #ccc;
@@ -34,14 +35,12 @@
             width: 25vh;
             padding: 5px;
             margin: 10px 0;
-            background-color: #000;
         }
 
         button {
             width: 20vh;
             padding: 8px 16px;
             margin-top: 20px;
-            background-color: #000;
         }
     </style>
 </head>
