--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -4,7 +4,6 @@
     <title>Login_Page</title>
 
     <style>
-
         body {
             margin: 0;
             padding: 0;
@@ -18,7 +17,7 @@
         }
 
         form {
-            margin-left: 50px;
+            align-items: left;
             text-align: center;
             width: 50vh;
             padding: 100px;
