--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -15,17 +15,14 @@
             background-position: center;
             background-repeat: no-repeat;
         }
-
         form {
-            align-items: left;
+            margin: 50px; /* Space from top and left edges */
             text-align: center;
             width: 50vh;
             padding: 100px;
             border: 2px solid #ccc;
             border-radius: 10px;
-            margin-top: 20px;
             background-color: #fff;
-            /*background-color: rgba(255, 255, 255, 0.9);*/ /* semi-transparent */
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
         }
 
