--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -9,14 +9,13 @@
             padding: 0;
             height: 100vh;
             display: flex;
-            align-items: center;
+            align-items: left;
             justify-content: center;
             background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
             background-position: center;
             background-repeat: no-repeat;
         }
         form {
-            margin: 50px; /* Space from top and left edges */
             text-align: center;
             width: 50vh;
             padding: 100px;
