--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -9,8 +9,8 @@
             padding: 0;
             height: 100vh;
             display: flex;
-            align-items: left;
-            justify-content: center;
+            align-items: flex-start;
+            justify-content: flex-start;
             background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
             background-position: center;
             background-repeat: no-repeat;
