--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -9,7 +9,7 @@
             padding: 0;
             height: 100vh;
             display: flex;
-            align-items: flex-start;
+            align-items: center;
             justify-content: flex-start;
             background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
             background-position: center;
