--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -11,6 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
+            margin-left: 20px;
             background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
             background-position: center;
             background-repeat: no-repeat;
