--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -49,10 +49,8 @@
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div style="text-align: center; margin-top: 10px;">
-            <a href="{{ url_for('second_page') }}">
-                <button type="submit" name="login">Forgot Password</button>
-            </a>
+        <div style="text-align: left; margin: 10px 0;">
+            <a href="{{ url_for('second_page') }}">Forgot Password?</a>
         </div>
 
         <div style="text-align: center; margin-top: 10px;">
@@ -63,7 +61,7 @@
 
         <div style="text-align: center; margin-top: 10px;">
             <a href="{{ url_for('second_page') }}">
-                <button type="submit" name="login">Register Now</button>
+                <button type="submit" name="login">Register Now </button>
             </a>
         </div>
 
