--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -51,7 +51,7 @@
         <br>
 
         <div style="text-align: right; margin: 10px 0;">
-            <a href="{{ url_for('forgotPassowrd_page') }}">Forgot Password?</a>
+            <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
         </div>
 
         <div style="text-align: center; margin-top: 10px;">
