--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -43,25 +43,21 @@
 </head>
 <body>
     <form method="POST">
-        <h1>Login Here</h1>
+        <h1>Forgot Passwword</h1>
         <br><br>
         <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
         <br>
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div style="text-align: right; margin: 10px 0;">
-            <a href="{{ url_for('second_page') }}">Forgot Password?</a>
-        </div>
-
         <div style="text-align: center; margin-top: 10px;">
-            <a href="{{ url_for('second_page') }}">
-                <button type="submit" name="login">Login</button>
+            <a href="{{ url_for('login') }}">
+                <button type="submit" name="login">Submit</button>
             </a>
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('second_page') }}">Register</a>
+            <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
 
     </form>
