--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -52,7 +52,7 @@
 
         <div style="text-align: center; margin-top: 10px;">
             <a href="{{ url_for('login') }}">
-                <button type="submit" name="login">Submit</button>
+                <button type="button" name="login">Submit</button>
             </a>
         </div>
 
