--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -50,7 +50,7 @@
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div style="text-align: right; margin: 10px 0;">
+        <div style="text-align: right;">
             <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
         </div>
 
