--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -49,10 +49,10 @@
         <br>
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
-
+        
         <div style="text-align: center; margin-top: 10px;">
             <a href="{{ url_for('login') }}">
-                <button type="submit" name="login">Register</button>
+                <button type="button" name="login">Submit</button>
             </a>
         </div>
 
