--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -2,45 +2,9 @@
 <html>
 <head>
     <title>Forgot_Password_page</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            margin-left: 70px;
-            background-image: url("{{ url_for('static', filename='INTI_PIC.png') }}");
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-
-        form {
-            text-align: center;
-            width: 30vh;
-            padding: 70px;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-
-        input[type="text"],
-        input[type="password"] {
-            width: 25vh;
-            padding: 10px;
-            margin: 10px 0;
-        }
-
-        button {
-            width: 25vh;
-            padding: 8px 16px;
-            margin-top: 25px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='main_page.css') }}">
 </head>
+
 <body>
     <form method="POST">
         <h1>Forgot Passwword</h1>
