--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login_Page</title>
-    <link rel="stylesheet" href="{{ url_for('../static/css_file', filename='main_page.css') }}">
+    <link rel="stylesheet" href="{{ url_for('../static_css/main_page.css')}}">
 </head>
 
 <body>
