--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Forgot_Password_page</title>
-    <link rel="stylesheet" href="{{ url_for('../static_css/main_page.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
 <body>
