--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -19,7 +19,7 @@
         </div>
 
         <div style="text-align: center; margin-top: 10px;">
-            <a href="{{ url_for('second_page') }}">
+            <a href="{{ url_for('home_page') }}">
                 <button type="submit" name="login">Login</button>
             </a>
         </div>
