--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -1,50 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meters to Feet (Second)</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-family: Arial, sans-serif;
-        }
-
-        form {
-            text-align: center;
-            padding: 20px;
-            border: 2px solid #ccc;
-            border-radius: 10px;
-            background-color: #f9f9f9;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        input[type="text"] {
-            padding: 5px;
-            margin: 10px 0;
-        }
-
-        button {
-            padding: 8px 16px;
-            margin-top: 10px;
-        }
-    </style>
+    <title>Login_Page</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
+
 <body>
     <form method="POST">
-        <label>Meters:</label><br>
-        <input type="text" name="textbox" value="{{ user_text }}"><br>
-        <label>Feet:</label><br>
-        <label>{{ output | safe }}</label><br>
-        <button type="submit" name="submit">Convert</button>
-    </form>
+        <h1>Login Here</h1>
+        <br><br>
+        <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+        <br>
+        <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+        <br>
 
-    <br>
-    <a href="{{ url_for('home') }}">
-        <button type="button">Change Page</button>
-    </a>
+        <div style="text-align: right;">
+            <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
+        </div>
+
+        <div style="text-align: center; margin-top: 10px;">
+            <a href="{{ url_for('home_page') }}">
+                <button type="submit" name="login">Login</button>
+            </a>
+        </div>
+
+        <div style="text-align: center; margin: 10px 0;">
+            <a href="{{ url_for('register_page') }}">Register</a>
+        </div>
+
+    </form>
 </body>
 </html>
