--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Forgot_Password_page</title>
+    <title>ForgotPassword_page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
 <body>
     <form method="POST">
-        <h1>Forgot Passwword</h1>
+        <h1>Enter Your OTP</h1>
         <br><br>
-        <input type="text" name="textbox" placeholder="Username" size="12" value="{{ login_text }}">
+        <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
-        <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
+        <input type="number" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
         <br>
 
         <div style="text-align: center; margin-top: 10px;">
-            <a href="{{ url_for('login') }}">
-                <button type="button" name="login">Submit</button>
+            <a href="{{ url_for('forgot_password_OTP_page') }}">
+                <button type="button" name="login">Send Verification</button>
             </a>
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('login') }}">Back to Login</a>
+            <a href="{{ url_for('forgot_password_OTP_page') }}">Back to Login</a>
         </div>
 
     </form>
