--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -17,7 +17,7 @@
         <input type="password" name="password2" placeholder="Confirm your Password" value="{{ password_text_2 }}">
 
         <div style="text-align: center; margin-top: 10px;">
-            <a href="{{ url_for('forgot_password_OTP_page') }}">
+            <a href="{{ url_for('login') }}">
                 <button type="button" name="login">Send Verification</button>
             </a>
         </div>
