--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -22,8 +22,8 @@ form {
 }
 
 input[type="text"],
-input[type="password"] 
-input[type="email"] 
+input[type="password"], 
+input[type="email"], 
 input[type="number"] {
     width: 25vh;
     padding: 10px;
