--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -8,9 +8,10 @@
 <body>
     <form method="POST">
         <h1>Reset Your Password</h1>
-        <h5>Make sure both of them are similar</h5>
-        <h5>Password length must be between 8-20</h5>
-        <h5>Password must include special character</h5>
+        <h4>Make sure both of them are similar <br>
+            Password length must be between 8-20 <br>
+            Password must include special character <br>
+        </h4>
         <br><br>
 
         <input type="password" name="password1" placeholder="Password" value="{{ password_text_1 }}">
