--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -22,7 +22,7 @@
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('login') }}">Back</a>
+            <a href="{{ url_for('forgot_password_page') }}">Back</a>
         </div>
 
     </form>
