--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -24,7 +24,7 @@
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('login') }}">Back to Login</a>
+            <a href="{{ url_for('forgot_password_OTP_page') }}">Back</a>
         </div>
 
     </form>
