--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ForgotPassword_page</title>
+    <title>ForgotPassword_OTP_page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
 <body>
     <form method="POST">
-        <h1>Enter Your OTP</h1>
+        <h1>Forgot Password</h1>
+        <h4>Entering your email address and contact number as a verification to reset your password</h4>
+        <h6>Remain: check either one of them enough and others use full name to check or user</h6>
         <br><br>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
@@ -16,12 +18,12 @@
 
         <div style="text-align: center; margin-top: 10px;">
             <a href="{{ url_for('forgot_password_OTP_page') }}">
-                <button type="button" name="login">Send Verification</button>
+                <button type="button" name="login">Send OTP</button>
             </a>
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('login') }}">Back to Login</a>
+            <a href="{{ url_for('login') }}">Back</a>
         </div>
 
     </form>
