--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ForgotPassword_OTP_page</title>
+    <title>ForgotPassword_page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
 <body>
     <form method="POST">
-        <h1>Forgot Password</h1>
-        <h4>Entering your email address and contact number as a verification to reset your password</h4>
+        <h1>Enter OTP</h1>
         <br><br>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
-        <input type="number" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
+        <input type="" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
         <br>
 
         <div style="text-align: center; margin-top: 10px;">
             <a href="{{ url_for('reset_password_page') }}">
-                <button type="button" name="login">Verify</button>
+                <button type="button" name="login">Send Verification</button>
             </a>
         </div>
 
         <div style="text-align: center; margin: 10px 0;">
-            <a href="{{ url_for('forgot_password_page') }}">Back</a>
+            <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
 
     </form>
