--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -24,7 +24,7 @@ form {
 input[type="text"],
 input[type="password"], 
 input[type="email"], 
-input[type="number"] {
+input[type="tel"] {
     width: 25vh;
     padding: 10px;
     margin: 10px 0;
