--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -11,7 +11,7 @@
         <br><br>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
-        <input type="" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
+        <input type="tel" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
         <br>
 
         <div style="text-align: center; margin-top: 10px;">
