--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -13,7 +13,7 @@
         <br><br>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
-        <input type="number" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
+        <input type="tel" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
         <br>
 
         <div style="text-align: center; margin-top: 10px;">
