--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -35,3 +35,16 @@ button {
     padding: 8px 16px;
     margin-top: 25px;
 }
+
+.otp-frame {
+    display: flex;
+    gap: 10px; /*Spacing between each box*/
+}
+
+.otp-input {
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
