--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ForgotPassword_page</title>
+    <title>ForgotPasswordOTP_page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
@@ -9,9 +9,12 @@
     <form method="POST">
         <h1>Enter OTP</h1>
         <br><br>
-        <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
-        <br>
-        <input type="tel" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
+        <div class="otp_frame">
+            <input type="text" maxlength="1" class="otp-input" />
+            <input type="text" maxlength="1" class="otp-input" />
+            <input type="text" maxlength="1" class="otp-input" />
+            <input type="text" maxlength="1" class="otp-input" />
+        </div>
         <br>
 
         <div style="text-align: center; margin-top: 10px;">
