--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ForgotPassword_OTP_page</title>
+    <title>ForgotPassword_page</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
