--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -9,11 +9,11 @@
     <form method="POST">
         <h1>Enter OTP</h1>
         <br><br>
-        <div class="otp_frame">
-            <input type="text" maxlength="1" class="otp-input" />
-            <input type="text" maxlength="1" class="otp-input" />
-            <input type="text" maxlength="1" class="otp-input" />
-            <input type="text" maxlength="1" class="otp-input" />
+        <div class="otp-frame">
+            <input type="number" maxlength="1" class="otp-input" />
+            <input type="number" maxlength="1" class="otp-input" />
+            <input type="number" maxlength="1" class="otp-input" />
+            <input type="number" maxlength="1" class="otp-input" />
         </div>
         <br>
 
