--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -39,6 +39,7 @@ button {
 .otp-frame {
     display: flex;
     gap: 10px; /*Spacing between each box*/
+    align-items: center;
 }
 
 .otp-input {
