--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -38,8 +38,12 @@ button {
 
 .otp-frame {
     display: flex;
-    gap: 10px; /*Spacing between each box*/
-    align-items: center;
+    gap: 15px; /*Spacing between each box*/
+}
+
+.button-frame {
+    text-align: center;
+    margin-top: 10px;
 }
 
 .otp-input {
