--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -16,13 +16,13 @@
         <input type="tel" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
         <br>
 
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="button-frame">
             <a href="{{ url_for('forgot_password_OTP_page') }}">
                 <button type="button" name="login">Send OTP</button>
             </a>
         </div>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div class="button-frame">
             <a href="{{ url_for('login') }}">Back</a>
         </div>
 
