--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -17,13 +17,13 @@
         </div>
         <br>
 
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="button-frame">
             <a href="{{ url_for('reset_password_page') }}">
                 <button type="button" name="login">Send Verification</button>
             </a>
         </div>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div class="button-frame">
             <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
 
