--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -18,13 +18,13 @@
             <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
         </div>
 
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="button-frame">
             <a href="{{ url_for('home_page') }}">
                 <button type="submit" name="login">Login</button>
             </a>
         </div>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div class="button-frame">
             <a href="{{ url_for('register_page') }}">Register</a>
         </div>
 
