--- a/templates/register_page.html
+++ b/templates/register_page.html
@@ -14,13 +14,13 @@
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="button-frame">
             <a href="{{ url_for('login') }}">
                 <button type="button" name="login">Submit</button>
             </a>
         </div>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div class="button-frame">
             <a href="{{ url_for('login') }}">Back to Login</a>
         </div>
 
