--- a/templates/resetPassword_page.html
+++ b/templates/resetPassword_page.html
@@ -17,13 +17,13 @@
         <input type="password" name="password1" placeholder="Password" value="{{ password_text_1 }}">
         <input type="password" name="password2" placeholder="Confirm your Password" value="{{ password_text_2 }}">
 
-        <div style="text-align: center; margin-top: 10px;">
+        <div class="button-frame">
             <a href="{{ url_for('login') }}">
                 <button type="button" name="login">Send Verification</button>
             </a>
         </div>
 
-        <div style="text-align: center; margin: 10px 0;">
+        <div class="button-frame">
             <a href="{{ url_for('forgot_password_OTP_page') }}">Back</a>
         </div>
 
