--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -15,7 +15,7 @@
         <br>
 
         <div style="text-align: right;">
-            <a href="{{ url_for('forgot_password_page') }}">Forgot Password?</a>
+            <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
         </div>
 
         <div class="button-frame">
