--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -10,10 +10,10 @@
         <h1>Enter OTP</h1>
         <br><br>
         <div class="otp-frame">
-            <input type="tel" maxlength="1" class="otp-input" />
-            <input type="tel" maxlength="1" class="otp-input" />
-            <input type="tel" maxlength="1" class="otp-input" />
-            <input type="tel" maxlength="1" class="otp-input" />
+            <input type="num" maxlength="1" class="otp-input" />
+            <input type="num" maxlength="1" class="otp-input" />
+            <input type="num" maxlength="1" class="otp-input" />
+            <input type="num" maxlength="1" class="otp-input" />
         </div>
         <br>
 
