--- a/templates/forgotPasswordOTP_page.html
+++ b/templates/forgotPasswordOTP_page.html
@@ -19,7 +19,7 @@
 
         <div class="button-frame">
             <a href="{{ url_for('reset_password_page') }}">
-                <button type="button" name="login">Send Verification</button>
+                <button type="button" name="login">Verify</button>
             </a>
         </div>
 
