--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -7,7 +7,7 @@ body {
     justify-content: flex-start;
     margin-left: 70px;
     background-image: url("../static_pic/INTI_PIC_22.png");
-    /*background-position: center;*/
+    background-size: auto;
     background-repeat: no-repeat;
 }
 
