--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-top: 10px;
     margin-left: 100px;
     background-image: url("../static_pic/INTI_PIC_22.png");
     background-size: cover;
