--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -7,7 +7,7 @@ body {
     justify-content: flex-start;
     margin-top: 10px;
     margin-left: 100px;
-    background-image: url("../static_pic/INTI_PIC_22.png");
+    background-image: url("../static_pic/INTI_PIC.png");
     background-size: auto;
     background-repeat: no-repeat;
 }
