--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -8,7 +8,7 @@ body {
     margin-top: 10px;
     margin-left: 100px;
     background-image: url("../static_pic/INTI_PIC.png");
-    background-size: auto;
+    background-size: contain;
     background-repeat: no-repeat;
 }
 
