--- a/static/static_css/main_page.css
+++ b/static/static_css/main_page.css
@@ -9,6 +9,7 @@ body {
     margin-left: 100px;
     background-image: url("../static_pic/INTI_PIC.png");
     background-size: contain;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
