--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -14,7 +14,7 @@
         <br>
 
         <div style="text-align: right;">
-            <a href oncclick="showAlert()">Forgot Password</a>
+            <button oncclick="showAlert()">Forgot Password</button>
         </div>
 
         <div class="button-frame">
