--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -8,16 +8,14 @@
 <body>
     <form method="POST">
         <h1>Forgot Password</h1>
-        <h4>Entering your email address and contact number as a verification to reset your password</h4>
+        <h4><noBold>Entering your email address to get the reset passowrd link</noBold></h4>
         <h6>Remain: check either one of them enough and others use full name to check or user</h6>
         <input type="email" name="textbox" placeholder="Email Address" size="12" value="{{ forgot_email_text }}">
         <br>
-        <input type="tel" name="textbox" placeholder="Contact Number" value="{{ forgot_phone_text }}">
-        <br>
 
         <div class="button-frame">
-            <a href="{{ url_for('forgot_password_OTP_page') }}">
-                <button type="button" name="login">Send OTP</button>
+            <a href="{{ url_for('resetPassword_page') }}">
+                <button type="button" name="login">Reset Password</button>
             </a>
         </div>
 
