--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -14,6 +14,10 @@
         <br>
 
         <div class="button-frame">
+            <a href="{{ url_for('forgotPassword_page') }}">Forgot Password</a>
+        </div>
+
+        <div class="button-frame">
             <a href="{{ url_for('home_page') }}">
                 <button type="submit" name="login">Login</button>
             </a>
