--- a/templates/forgotPassword_page.html
+++ b/templates/forgotPassword_page.html
@@ -14,7 +14,7 @@
         <br>
 
         <div class="button-frame">
-            <a href="{{ url_for('resetPassword_page') }}">
+            <a href="{{ url_for('reset_password_page') }}">
                 <button type="button" name="login">Reset Password</button>
             </a>
         </div>
