--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -14,7 +14,7 @@
         <br>
 
         <div class="button-frame">
-            <a href="{{ url_for('forgotPassword_page') }}">Forgot Password</a>
+            <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
         </div>
 
         <div class="button-frame">
