--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Login_Page</title>
+    <div class="heading"></div>
     <link rel="stylesheet" href="{{ url_for('static', filename='static_css/main_page.css') }}">
 </head>
 
@@ -13,7 +14,7 @@
         <input type="password" name="password" placeholder="Password" value="{{ password_text }}">
         <br>
 
-        <div class="button-frame">
+        <div class="button-frame" >
             <a href="{{ url_for('forgot_password_page') }}">Forgot Password</a>
         </div>
 
